# pseudo-rng

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
prng/: lcg.py
prng/util/: __init__.py  util.py
src/prng/util/: util.py
tests/: prime_nums_2k.txt  test_is_prime.py  test_prime_factors.py  test_primitive_roots.py  test_relatively_prime.py  test_util.py
