[metadata]
name = pseudo-rng
version = 0.0.1
author = Greyson Murray
author_email = greysonmurraydev@gmail.com
description = A set of tools for investigating and examining pseudorandom number generation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/greysonDEV/pseudo-rng
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
test =
	pytest>=6